--- a/Lab3/web/frontend/css/app.css
+++ b/Lab3/web/frontend/css/app.css
@@ -7,4 +7,11 @@
 
 .response{
     text-align: center;
+    display: flex;
+}
+
+.result{
+    width: 40%;
+    padding: 8px;
+    margin: 8px auto 8px auto;
 }
